--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-custom-text",
+  "name": "@freakycoder/react-native-custom-text",
   "version": "0.0.1",
   "description": "Custom Text with cool heading & font family interaction for React Native.",
   "keywords": [
