expo example is here and working

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
       "npx prettier --write",
       "eslint src/*.js --fix-dry-run"
     ]
+  },
+  "dependencies": {
+    "tslib": "^1.14.1"
   }
 }
