--- a/example/package.json
+++ b/example/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
