--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freakycoder/react-native-custom-text",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Custom Text with cool heading & font family interaction for React Native.",
   "keywords": [
     "text",
@@ -22,7 +22,7 @@
   ],
   "homepage": "https://www.freakycoder.com",
   "bugs": "https://github.com/WrathChaos/react-native-custom-text/issues",
-  "main": "./lib/src/CustomText.js",
+  "main": "./build/dist/RNText.js",
   "repository": "git@github.com:WrathChaos/react-native-custom-text.git",
   "author": "Kuray (FreakyCoder) <kurayogun@gmail.com>",
   "license": "MIT",
